--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
     <div id="watermark">
-      <a href="https://github.com/felixjchen" class="bx--link"> FC</a>
+      <a href="https://github.com/felixjchen/screen-share" class="bx--link"> Source</a>
     </div>
 
   </div>
