--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
 
   <link href="https://unpkg.com/carbon-components/css/carbon-components.min.css" rel="stylesheet" />
   <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/carbon-components-react@7.17.0/lib/index.min.js"></script> -->
+
   <script src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
   <script src="index.js"></script>
   <link href="main.css" rel="stylesheet" />
+
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel" src="like_button.js"></script>
+  
 </head>
 
 <body>
+
+  <div id="like_button_container"></div>
 
   <div id="loading" class="bx--loading-overlay">
     <div data-loading class="bx--loading">
@@ -27,6 +37,7 @@
   </div>
 
   <div id="outer">
+
     <div id="view" class="bx--grid">
       <video id="media" autoplay muted></video>
     </div>
