--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>P2P </title>
+  <title>screen-share </title>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -10,6 +10,7 @@
   <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js"></script>
   <script src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
   <script src="index.js"></script>
   <link href="main.css" rel="stylesheet" />
