--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             </li>
 
-            <button onclick="setScreenStream()" class="bx--btn bx--btn--primary bx--btn--sm controlStep" type="button">
+            <button onclick="setStream()" class="bx--btn bx--btn--primary bx--btn--sm controlStep" type="button">
               Set Target
             </button>
             <li class="bx--list__item">Copy your streamer ID and distribute to your watchers
