--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                   <input id="streamerID" type="text" class="bx--text-input" placeholder="Streamer ID" invalid>
                 </div>
                 <button id="startWatching"
+                  onclick="getStream()"
                   class="bx--btn bx--btn--primary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-center  bx--btn--field">
                   <span class="bx--assistive-text">Add</span>
                   <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;"
