--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>screen-share </title>
+  <title>screenshare </title>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
