--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="bx--list__item"> Click the set target button to choose what to show others
 
               <div class="bx--form__helper-text">
-                Share audio checkbox works for Chromium tabs and must be selected
+                Share audio checkbox only works for Chromium tabs
               </div>
 
             </li>
