--- a/index.html
+++ b/index.html
@@ -2,61 +2,61 @@
 <html>
 
 <head>
-  <title>Screenshare </title>
+    <title>Screenshare </title>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link href="https://unpkg.com/carbon-components/css/carbon-components.min.css" rel="stylesheet" />
-  <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js"></script>
-  <script src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link href="https://unpkg.com/carbon-components/css/carbon-components.min.css" rel="stylesheet" />
+    <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js"></script>
+    <script src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-  <script src="index.js"></script>
-  <link href="main.css" rel="stylesheet" />
+    <script src="index.js"></script>
+    <link href="main.css" rel="stylesheet" />
 </head>
 
 <body>
 
-  <div id="loading" class="bx--loading-overlay">
-    <div data-loading class="bx--loading">
-      <svg class="bx--loading__svg" viewBox="-75 -75 150 150">
+    <div id="loading" class="bx--loading-overlay">
+        <div data-loading class="bx--loading">
+            <svg class="bx--loading__svg" viewBox="-75 -75 150 150">
         <title>Loading</title>
         <circle class="bx--loading__stroke" cx="0" cy="0" r="37.5" />
       </svg>
-    </div>
-  </div>
-
-  <div id="outer">
-    <div id="view" class="bx--grid">
-      <video id="media" autoplay muted></video>
+        </div>
     </div>
 
-    <div id="control" class="bx--grid">
-      <div class="bx--row">
-        <div class="bx--col-sm-4 bx--col-md-4 bx--col-padding">
-          <h4>Stream</h4>
+    <div id="outer">
+        <div id="view" class="bx--grid">
+            <video id="media" autoplay muted></video>
+        </div>
 
-          <ol class="bx--list--ordered">
-            <li class="bx--list__item"> Click the set target button to choose what to show others
+        <div id="control" class="bx--grid">
+            <div class="bx--row">
+                <div class="bx--col-sm-4 bx--col-md-4 bx--col-padding">
+                    <h4>Stream</h4>
 
-              <div class="bx--form__helper-text">
-                Share audio checkbox only works for Chromium tabs
-              </div>
+                    <ol class="bx--list--ordered">
+                        <li class="bx--list__item"> Click the set target button to choose what to show others
 
-            </li>
+                            <div class="bx--form__helper-text">
+                                Remember to select the share audio checkbox
+                            </div>
 
-            <button onclick="stopStream();setStream();" class="bx--btn bx--btn--primary bx--btn--sm controlStep" type="button">
+                        </li>
+
+                        <button onclick="stopStream();setStream();" class="bx--btn bx--btn--primary bx--btn--sm controlStep" type="button">
               Set Target
             </button>
-            <li class="bx--list__item">Copy your streamer ID and distribute to your watchers
-              <div class="bx--snippet bx--snippet--single peerIDField controlStep">
-                <div tabindex="0" class="bx--snippet-container" aria-label="Code Snippet Text">
-                  <pre>
+                        <li class="bx--list__item">Copy your streamer ID and distribute to your watchers
+                            <div class="bx--snippet bx--snippet--single peerIDField controlStep">
+                                <div tabindex="0" class="bx--snippet-container" aria-label="Code Snippet Text">
+                                    <pre>
                     <code id="peerID"> </code>
                   </pre>
-                </div>
-                <button id="peerIDCopy" data-copy-btn class="bx--copy-btn" type="button" tabindex="0">
+                                </div>
+                                <button id="peerIDCopy" data-copy-btn class="bx--copy-btn" type="button" tabindex="0">
                   <span class="bx--assistive-text bx--copy-btn__feedback">Copied!</span>
                   <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;"
                     xmlns="http://www.w3.org/2000/svg" class="bx--snippet__icon" width="16" height="16"
@@ -66,24 +66,22 @@
                     <path d="M2,9H1V2A1,1,0,0,1,2,1H9V2H2Z"></path>
                   </svg>
                 </button>
-              </div>
-            </li>
+                            </div>
+                        </li>
 
-        </div>
-
-        <div class="bx--col-sm-4 bx--col-md-4 bx--col-padding">
-          <h4>Watch</h4>
-
-          <ol class="bx--list--ordered">
-            <li class="bx--list__item">Fill in the streamer's ID, then click the plus button to start watching
-
-              <div class="peerIDField controlStep">
-                <div class="bx--form-item">
-                  <input id="streamerID" type="text" class="bx--text-input" placeholder="Streamer ID" invalid>
                 </div>
-                <button id="startWatching"
-                  onclick="getStream()"
-                  class="bx--btn bx--btn--primary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-center  bx--btn--field">
+
+                <div class="bx--col-sm-4 bx--col-md-4 bx--col-padding">
+                    <h4>Watch</h4>
+
+                    <ol class="bx--list--ordered">
+                        <li class="bx--list__item">Fill in the streamer's ID, then click the plus button to start watching
+
+                            <div class="peerIDField controlStep">
+                                <div class="bx--form-item">
+                                    <input id="streamerID" type="text" class="bx--text-input" placeholder="Streamer ID" invalid>
+                                </div>
+                                <button id="startWatching" onclick="getStream()" class="bx--btn bx--btn--primary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-center  bx--btn--field">
                   <span class="bx--assistive-text">Add</span>
                   <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;"
                     xmlns="http://www.w3.org/2000/svg" class="bx--btn__icon" width="16" height="16" viewBox="0 0 16 16"
@@ -91,21 +89,21 @@
                     <path d="M9 7L9 3 7 3 7 7 3 7 3 9 7 9 7 13 9 13 9 9 13 9 13 7z"></path>
                   </svg>
                 </button>
-              </div>
+                            </div>
 
-            </li>
-          </ol>
+                        </li>
+                    </ol>
 
+                </div>
+            </div>
         </div>
-      </div>
+
+
+        <div id="watermark">
+            <a href="https://github.com/felixjchen/screen-share" class="bx--link"> Source</a>
+        </div>
+
     </div>
-
-
-    <div id="watermark">
-      <a href="https://github.com/felixjchen/screen-share" class="bx--link"> Source</a>
-    </div>
-
-  </div>
 
 
 
