--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
                         </li>
 
                         <button onclick="stopStream();setStream();" class="bx--btn bx--btn--primary bx--btn--sm controlStep" type="button">
-              Set Target
-            </button>
+                          Set Target
+                        </button>
                         <li class="bx--list__item">Copy your streamer ID and distribute to your watchers
                             <div class="bx--snippet bx--snippet--single peerIDField controlStep">
                                 <div tabindex="0" class="bx--snippet-container" aria-label="Code Snippet Text">
                                     <pre>
-                    <code id="peerID"> </code>
-                  </pre>
+                                      <code id="peerID"> </code>
+                                    </pre>
                                 </div>
                                 <button id="peerIDCopy" data-copy-btn class="bx--copy-btn" type="button" tabindex="0">
-                  <span class="bx--assistive-text bx--copy-btn__feedback">Copied!</span>
-                  <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;"
-                    xmlns="http://www.w3.org/2000/svg" class="bx--snippet__icon" width="16" height="16"
-                    viewBox="0 0 16 16" aria-hidden="true">
-                    <path d="M14,5v9H5V5h9m0-1H5A1,1,0,0,0,4,5v9a1,1,0,0,0,1,1h9a1,1,0,0,0,1-1V5a1,1,0,0,0-1-1Z">
-                    </path>
-                    <path d="M2,9H1V2A1,1,0,0,1,2,1H9V2H2Z"></path>
-                  </svg>
-                </button>
+                                  <span class="bx--assistive-text bx--copy-btn__feedback">Copied!</span>
+                                  <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;"
+                                    xmlns="http://www.w3.org/2000/svg" class="bx--snippet__icon" width="16" height="16"
+                                    viewBox="0 0 16 16" aria-hidden="true">
+                                    <path d="M14,5v9H5V5h9m0-1H5A1,1,0,0,0,4,5v9a1,1,0,0,0,1,1h9a1,1,0,0,0,1-1V5a1,1,0,0,0-1-1Z">
+                                    </path>
+                                    <path d="M2,9H1V2A1,1,0,0,1,2,1H9V2H2Z"></path>
+                                  </svg>
+                                </button>
                             </div>
                         </li>
 
@@ -82,13 +82,13 @@
                                     <input id="streamerID" type="text" class="bx--text-input" placeholder="Streamer ID" invalid>
                                 </div>
                                 <button id="startWatching" onclick="getStream()" class="bx--btn bx--btn--primary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-center  bx--btn--field">
-                  <span class="bx--assistive-text">Add</span>
-                  <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;"
-                    xmlns="http://www.w3.org/2000/svg" class="bx--btn__icon" width="16" height="16" viewBox="0 0 16 16"
-                    aria-hidden="true">
-                    <path d="M9 7L9 3 7 3 7 7 3 7 3 9 7 9 7 13 9 13 9 9 13 9 13 7z"></path>
-                  </svg>
-                </button>
+                                <span class="bx--assistive-text">Watch</span>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;"
+                                  xmlns="http://www.w3.org/2000/svg" class="bx--btn__icon" width="16" height="16" viewBox="0 0 16 16"
+                                  aria-hidden="true">
+                                  <path d="M9 7L9 3 7 3 7 7 3 7 3 9 7 9 7 13 9 13 9 9 13 9 13 7z"></path>
+                                </svg>
+                              </button>
                             </div>
 
                         </li>
