--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h4>Watch</h4>
 
                     <ol class="bx--list--ordered">
-                        <li class="bx--list__item">Fill in the streamer's ID, then click the plus button to start watching
+                        <li class="bx--list__item">Fill in the streamer's ID, start watching
 
                             <div class="peerIDField controlStep">
                                 <div class="bx--form-item">
