--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <div class="bx--form-item">
                                     <input id="streamerID" type="text" class="bx--text-input" placeholder="Streamer ID" invalid>
                                 </div>
-                                <button id="startWatching" onclick="getStream()" class="bx--btn bx--btn--primary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-center  bx--btn--field">
+                                <button id="startWatching" onclick="watchStream()" class="bx--btn bx--btn--primary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-center  bx--btn--field">
                                 <span class="bx--assistive-text">Watch</span>
                                 <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;"
                                   xmlns="http://www.w3.org/2000/svg" class="bx--btn__icon" width="16" height="16" viewBox="0 0 16 16"
