--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Screenshare </title>
+    <title>Screenshare v1</title>
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
