--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Screen Share</title>
+
+    <title>Stream Share</title>
+
+    <script src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
   </head>
 
   <body>
