--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       rel="stylesheet"
       href="https://unpkg.com/carbon-components/css/carbon-components.min.css"
     />
+    <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
+
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.svg" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -27,8 +29,6 @@
     -->
 
     <title>Stream Share</title>
-
-    <script src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
   </head>
 
   <body>
