--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Stream Share</title>
+    <title>Ice Cream</title>
   </head>
 
   <body>
