deleted old code

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
     <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./ice-cream.svg" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
